examples/type_system/failing/189_contextual_boundary_unresolved_strict_e425.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/189_contextual_boundary_unresolved_strict_e425.flx
// error[E421]: Unknown Member in Exposing
//
// `print` is not defined in module `Flow.Primops`.
//
//   examples/type_system/failing/189_contextual_boundary_unresolved_strict_e425.flx:7:1
//   |
// 7 | // `print` is not defined in module `Flow.Primops`.
//   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//
// Hint:
//   Check the public members of `Flow.Primops` or remove `print` from the exposing list.
//
//
// error[E012]: Unknown Module Member
//
// Module `TypeSystem.HmGenericModule` has no member named `id`.
//
//   examples/type_system/failing/189_contextual_boundary_unresolved_strict_e425.flx:57:5
//    |
// 57 |     TypeSystem.HmGenericModule.id(1)
//    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//
// Hint:
//   Check the module's public members or import the correct module.
//
//
// • 1 error • examples/type_system/failing/189_contextual_boundary_unresolved_strict_e425.flx
// error[E018]: Import Not Found
//
// Cannot find module `TypeSystem.HmGenericModule` to import.
//
//   examples/type_system/failing/189_contextual_boundary_unresolved_strict_e425.flx:54:1
//    |
// 54 | import TypeSystem.HmGenericModule
//    | ^
//
// Hint:
//   Check that: 1) The module file exists (e.g., `TypeSystem.HmGenericModule.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
//   Looked for module `TypeSystem.HmGenericModule` under roots: examples/type_system/failing, src, lib (imported from examples/type_system/failing/189_contextual_boundary_unresolved_strict_e425.flx).
//
// Found 3 errors across 2 modules.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E012
// expect-error: E018
// expect-error: E421

// E425: strict mode rejects unresolved generic runtime boundary checks on module-qualified calls.

import TypeSystem.HmGenericModule

fn main() -> Unit {
    TypeSystem.HmGenericModule.id(1)
    None
}
